# SPI.Linux

./: CMakeLists.txt  CMakePresets.json  LICENSE
public/PiSubmarine/SPI/Linux/: Driver.h
src/: CMakeLists.txt
src/PiSubmarine/SPI/Linux/: Driver.cpp
test/: CMakeLists.txt
test/PiSubmarine/SPI/Linux/: DriverTest.cpp
